--- a/src/components/RegistrationForm.module.css
+++ b/src/components/RegistrationForm.module.css
@@ -7,7 +7,7 @@
 
 .formControl {
   display: grid;
-  grid-template-rows: auto;
+  align-self: start;
   gap: 1em;
 }
 
